k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offgrid
  labels:
    name: offgrid
    environment: staging
